--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@
                 </div>
 
             </div>
+            <div class="Download-CV">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
 
     </main>
