added awesome icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/0d2b7640b9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,8 +31,8 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile" src="images/hardy.png" alt="">
         </div>
@@ -162,7 +163,7 @@
 
             </div>
             <div class="Download-CV">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
